--- a/util/sample_init_scripts/README
+++ b/util/sample_init_scripts/README
@@ -2,6 +2,8 @@ For TOSS deployment, see genders/.
 	This uses a cluster-wide genders file to manage 
 	daemon config consistency.
 
+For Cray XC40 (running Rhine Redwood), see XC40/.
+
 For irregular centos/rhel6 clusters, see rhel/
 	This uses tedious lists to manage daemon config consistency.
 	Seriously, save yourself the pain and install libgenders.
