--- a/ldms/man/Plugin_aries_mmr.man
+++ b/ldms/man/Plugin_aries_mmr.man
@@ -1,22 +1,22 @@
 .\" Manpage for Plugin_aries_mmr
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "03 Feb 2016" "v3" "LDMS Plugin for the aries_mmr sampler.
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin for the aries_mmr sampler."
 
 .SH NAME
 Plugin_aries_mmr - man page for the aries_mmr sampler and variants.
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or in a configuration file
 .br
-ldmsctl> config name=aries_mmr [ <attr> = <value> ]
+config name=aries_mmr [ <attr> = <value> ]
 .br
-ldmsctl> config name=aries_nic_mmr [ <attr> = <value> ]
+config name=aries_nic_mmr [ <attr> = <value> ]
 .br
-ldmsctl> config name=aries_rtr_mmr [ <attr> = <value> ]
+config name=aries_rtr_mmr [ <attr> = <value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The aries_XXX_mmr sampler variants. provides aries network counter information. The particular counters to be read are
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file. The aries_XXX_mmr sampler variants. provides aries network counter information. The particular counters to be read are
 specified by configuration files. No functional combinations of the counters are supported (.i.e., does not sum
 or scale values).
 
@@ -44,12 +44,12 @@ To build the aries_mmr sampler, build with the following flags:
 .B  --enable-aries_mmr
 .B   --with-aries-libgpcd=<full_path_to_libgpcd.a>,<full_path_to_lib_gpcd.h>
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<iname> file=<file> [component_id=<compid> aries_rtr_id=<rtrid> schema=<sname>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -119,12 +119,12 @@ AR_NIC_RSPMON_NPT_EVENT_CNTR_NL_FLITS
 AR_RTR_1_2_INQ_PRF_INCOMING_FLIT_VC0
 .br
 
-.PP Starting
-ldmsctl> load name=aries_mmr
+.PP Starting within ldmsd_controller or in a configuration file
+load name=aries_mmr
 .br
-ldmsctl>  config name=aries_mmr producer=localhost2 instance=localhost2/aries_mmr schema=aries_mmr file=/home/XXX/metrics.txt
+config name=aries_mmr producer=localhost2 instance=localhost2/aries_mmr schema=aries_mmr file=/home/XXX/metrics.txt
 .br
-ldmsctl> start name=aries_mmr interval=1000000
+start name=aries_mmr interval=1000000
 .br
 
 .PP Output
@@ -139,4 +139,4 @@ localhost2/aries_mmr: consistent, last update: Wed Oct 28 08:48:36 2015 [153343u
 
 
 .SH SEE ALSO
-ldmsd(8), Plugin_cray_sampler_variants(7), ldms_quickstart(7)
+ldmsd(8), Plugin_cray_sampler_variants(7), ldms_quickstart(7), ldmsd_controller(8)
