--- a/ldms/man/Plugin_cray_system_sampler_variants.man
+++ b/ldms/man/Plugin_cray_system_sampler_variants.man
@@ -1,20 +1,20 @@
 .\" Manpage for Plugin_cray_system_sampler_variants
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "28 Oct 2015" "v3" "LDMS Plugin for all variants of the cray_system_sampler man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin for all variants of the cray_system_sampler man page"
 
 .SH NAME
 Plugin_cray_system_sampler_variants - man page for all variants of the LDMS cray_system_sampler plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or in a configuration file
 .br
-ldmsctl> config name=cray_gemini_r_sampler [ <attr> = <value> ]
+config name=cray_gemini_r_sampler [ <attr> = <value> ]
 .br
-ldmsctl> config name=cray_aries_r_sampler [ <attr> = <value> ]
+config name=cray_aries_r_sampler [ <attr> = <value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-There are three variants of the cray_system_sampler.
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file. There are three variants of the cray_system_sampler.
 
 The cray_gemini_r_sampler (previously called cray_system_sampler_r) provides
 data from a variety of sources on the XE/XK systems and uses the gpcdr module
@@ -48,13 +48,13 @@ If you intend to collect lustre metrics, you must add to
 LD_LIBRARY_PATH
 Path to the lustre plugin (same as the LDMSD_PLUGIN_LIBPATH). This will be addressed in a future release.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<iname>  hsn_metrics_type=<mtype> llite=<llite> rtrfile=<rtrfile> gpu_devices=<gpulist> off_<namespace>=1 [schema=<sname>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -220,12 +220,11 @@ No known bugs.
 .SH EXAMPLES
 .PP
 1) cray_gemini_r_sampler:
+Within ldmsd_controller or in a configuration file:
 .nf
-$/projects/ldms/Build/ldms.usr/sbin/ldmsctl -S /var/run/ldmsd/metric_socket
-ldmsctl> load name=cray_gemini_r_sampler
-ldmsctl> config name=cray_gemini_r_sampler producer=64 instance=nid00064/cray_gemini_r_sampler rtrfile=/projects/ldms/parsed_interconnect.txt llite="snx11000" hsn_metrics_type=2 gpu_devices="Tesla_K20X"
-ldmsctl> start name=cray_gemini_r_sampler interval=1000000
-ldmsctl> quit
+load name=cray_gemini_r_sampler
+config name=cray_gemini_r_sampler producer=64 instance=nid00064/cray_gemini_r_sampler rtrfile=/projects/ldms/parsed_interconnect.txt llite="snx11000" hsn_metrics_type=2 gpu_devices="Tesla_K20X"
+start name=cray_gemini_r_sampler interval=1000000
 .fi
 .PP
 .nf
@@ -683,4 +682,4 @@ U64 1626210          ipogif0_tx_bytes
 
 
 .SH SEE ALSO
-ldmsd(7), Plugin_kgnilnd(7), Plugin_aries_mmr(7), ldms_quickstart(7)
+ldmsd(7), Plugin_kgnilnd(7), Plugin_aries_mmr(7), ldms_quickstart(7), ldmsd_controller(8)
