--- a/ldms/man/Plugin_kgnilnd.man
+++ b/ldms/man/Plugin_kgnilnd.man
@@ -1,26 +1,26 @@
 .\" Manpage for Plugin_kgnilnd
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "01 Dec 2015" "v3" "LDMS Plugin kgnilnd man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin kgnilnd man page"
 
 .SH NAME
 Plugin_kgnilnd - man page for the LDMS kgnilnd plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or in a configuration file
 .br
-ldmsctl> config name=kgnilnd [ <attr>=<value> ]
+config name=kgnilnd [ <attr>=<value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The kgnilnd plugin provides Cray specific info from /proc/kgnilnd.
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file. The kgnilnd plugin provides Cray specific info from /proc/kgnilnd.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -49,13 +49,12 @@ Optional component identifier. Defaults to zero.
 No known bugs.
 
 .SH EXAMPLES
+Within ldmsd_controller or in a configuration file
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=kgnilnd
-ldmsctl> config name=kgnilnd producer=vm1_1 instance=vm1_1/kgnilnd
-ldmsctl> start name=kgnilnd interval=1000000
-ldmsctl> quit
+load name=kgnilnd
+config name=kgnilnd producer=vm1_1 instance=vm1_1/kgnilnd
+start name=kgnilnd interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), Plugin_cray_system_sampler_variants(7), ldms_quickstart(7)
+ldmsd(8), Plugin_cray_system_sampler_variants(7), ldms_quickstart(7), ldmsd_controller(8)
