--- a/ldms/man/Plugin_procinterrupts.man
+++ b/ldms/man/Plugin_procinterrupts.man
@@ -1,27 +1,27 @@
 .\" Manpage for Plugin_procinterrupts
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "01 Dec 2015" "v3" "LDMS Plugin interrupts man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin interrupts man page"
 
 .SH NAME
 Plugin_interrupts - man page for the LDMS interrupts plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or a configuration file:
 .br
-ldmsctl> config name=interrupts [ <attr>=<value> ]
+config name=interrupts [ <attr>=<value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The interrupts plugin provides info from /proc/interrupts.
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file. The interrupts plugin provides info from /proc/interrupts.
 The metric name will be irq.<name>#CPU_NUMBER.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<set_name> [schema=<sname>] [component_id=<compid> with_jobid=<bool>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -55,13 +55,12 @@ No known bugs.
 
 .SH EXAMPLES
 .PP
+Within ldmsd_controller or a configuration file:
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=procinterrupts
-ldmsctl> config name=procinterrupts producer=1 instance=vm1_1/procinterrupts
-ldmsctl> start name=procinterrupts interval=1000000
-ldmsctl> quit
+load name=procinterrupts
+config name=procinterrupts producer=1 instance=vm1_1/procinterrupts
+start name=procinterrupts interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
