--- a/ldms/man/Plugin_procnetdev.man
+++ b/ldms/man/Plugin_procnetdev.man
@@ -1,25 +1,26 @@
 .\" Manpage for Plugin_procnetdev
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "01 Dec 2015" "v3" "LDMS Plugin procnetdev man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin procnetdev man page"
 
 .SH NAME
 Plugin_procnetdev - man page for the LDMS procnetdev plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or a configuration file:
 .br
-ldmsctl> config name=procnetdev [ <attr> = <value> ]
+config name=procnetdev [ <attr> = <value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The procnetdev plugin provides network info from /proc/net/dev.
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file. The procnetdev plugin provides network info from /proc/net/dev.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<set_name> ifaces=<ifs> [component_id=<compid> schema=<sname> with_jobid=<0/1>]
-.brldmsctl configuration line
+.br
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -57,13 +58,12 @@ Interfaces list is limited to 5.
 
 .SH EXAMPLES
 .PP
+Within ldmsd_controller or a configuration file:
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=procnetdev
-ldmsctl> config name=procnetdev producer=vm1_1 instance=vm1_1/procnetdev iface=eth0,eth1
-ldmsctl> start name=procnetdev interval=1000000
-ldmsctl> quit
+load name=procnetdev
+config name=procnetdev producer=vm1_1 instance=vm1_1/procnetdev iface=eth0,eth1
+start name=procnetdev interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
