--- a/ldms/man/Plugin_procnfs.man
+++ b/ldms/man/Plugin_procnfs.man
@@ -1,26 +1,27 @@
 .\" Manpage for Plugin_procnfs
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "01 Dec 2015" "v3" "LDMS Plugin procnfs man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin procnfs man page"
 
 .SH NAME
 Plugin_procnfs - man page for the LDMS procnfs plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or a configuration file:
 .br
-ldmsctl> config name=procnfs [ <attr>=<value> ]
+config name=procnfs [ <attr>=<value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file.
 The procnfs plugin provides info from /proc/net/rpc/nfs
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -55,12 +56,11 @@ No known bugs.
 .SH EXAMPLES
 .PP
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=procnfs
-ldmsctl> config name=procnfs producer=vm1_1 instance=vm1_1/procnfs
-ldmsctl> start name=procnfs interval=1000000
-ldmsctl> quit
+Within ldmsd_controller or a configuration file:
+load name=procnfs
+config name=procnfs producer=vm1_1 instance=vm1_1/procnfs
+start name=procnfs interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
