--- a/ldms/man/Plugin_procstat.man
+++ b/ldms/man/Plugin_procstat.man
@@ -1,27 +1,27 @@
 .\" Manpage for Plugin_procstat
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "17 Jan 2016" "v3.0.0" "LDMS Plugin procstat man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin procstat man page"
 
 .SH NAME
 Plugin_procstat - man page for the LDMS procstat plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or in a configuration file
 .br
-ldmsctl> config name=procstat [ <attr> = <value> ]
+config name=procstat [ <attr> = <value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The procstat plugin provides cpu utilization info from /proc/stat,
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via
+ldmsd_controller or a configuration file. The procstat plugin provides cpu utilization info from /proc/stat,
 allowing for hyperthreading and downed core variability.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -60,15 +60,14 @@ This reports both interrupt count and time processing them. For detailed interru
 .SH BUGS
 Reporting all interrupts by name is not implemented.
 
-.SH EXAMPLES 
+.SH EXAMPLES
 .PP
+Within ldmsd_controller or a configuration file:
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=procstat
-ldmsctl> config name=procstat producer=vm1_1 component_id=1 maxcpu=4 instance=vm1_1/procstat with_jobid=0
-ldmsctl> start name=procstat interval=1000000
-ldmsctl> quit
+load name=procstat
+config name=procstat producer=vm1_1 component_id=1 maxcpu=4 instance=vm1_1/procstat with_jobid=0
+start name=procstat interval=1000000
 .fi
 
 .SH SEE ALSO
-Kernel source fs/proc/stat.c and proc(5), ldmsd(8)
+Kernel source fs/proc/stat.c and proc(5), ldmsd(8), ldmsd_controller(8)
