--- a/ldms/man/Plugin_vmstat.man
+++ b/ldms/man/Plugin_vmstat.man
@@ -1,26 +1,26 @@
 .\" Manpage for Plugin_vmstat
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "01 Dec 2015" "v3" "LDMS Plugin vmstat man page"
+.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin vmstat man page"
 
 .SH NAME
 Plugin_vmstat - man page for the LDMS vmstat plugin
 
 .SH SYNOPSIS
-Within ldmsctl
+Within ldmsd_controller or in a configuration file
 .br
-ldmsctl> config name=vmstat [ <attr>=<value> ]
+config name=vmstat [ <attr>=<value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The vmstat plugin provides info from /proc/vmstat.
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller
+or a configuration file. The vmstat plugin provides info from /proc/vmstat.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
 
 .TP
 .BR config
 name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
 .br
-ldmsctl configuration line
+configuration line
 .RS
 .TP
 name=<plugin_name>
@@ -54,13 +54,12 @@ No known bugs.
 
 .SH EXAMPLES
 .PP
+Within ldmsd_controller or a configuration file:
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=vmstat
-ldmsctl> config name=vmstat producer=1 instance=vm1_1/vmstat
-ldmsctl> start name=vmstat interval=1000000
-ldmsctl> quit
+load name=vmstat
+config name=vmstat producer=1 instance=vm1_1/vmstat
+start name=vmstat interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
