--- a/ldms/man/ldms_quickstart.man
+++ b/ldms/man/ldms_quickstart.man
@@ -1,6 +1,6 @@
 .\" Manpage for LDMS_QuickStart
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "10 Nov 2015" "v3" "LDMS_QuickStart man page"
+.TH man 7 "12 Dec 2016" "v3" "LDMS_QuickStart man page"
 
 .SH NAME
 LDMS_QuickStart - man page for Quick Start of LDMS
@@ -46,7 +46,7 @@ plugins are provided. Storage occurs when a
 valid updated metric set data is collected by an aggregator that
 has been configured to write that data to storage. Collection of
 a metric set whose data has not been updated or is incomplete
-does not result in a write to storage in any format. 
+does not result in a write to storage in any format.
 
 .PP
 The host daemon is the same base code in all cases; differentiation is based on configuration of plugins for sampling or
@@ -64,11 +64,9 @@ aggregate data from multiple ldmsds
 .IP \[bu]
 store collected data to files.
 .PP
-There are four basic configurations that will be addressed:
+There are three basic configurations that will be addressed:
 .IP \[bu]
-configuring ldmsd
-.IP \[bu]
-configuring a collector plugin on a running ldmsd
+configuring an ldmsd with collector plugins
 .IP \[bu]
 configuring a ldmsd to aggregate information from other ldmsds
 .IP \[bu]
@@ -80,8 +78,28 @@ While a complete listing of flags and parameters can be seen by running
 ldmsd and the configuration tools with the --help directive, this document describes the flags and parameters required for running a basic setup.
 .PP
 There are no run scripts provided in the current release; the examples here can be used in the creation of such.
+.PP
 
-.SH PREREQUISITES:
+.SH Arrangement of this document
+This document is arranged as follows:
+.IP
+1) Prerequisites
+.IP
+2) Build and install
+.IP
+3) Configuring and Starting an ldmsd (general)
+.IP
+4) through 8) Example ldmsd configurations and queries
+.IP
+9) Protection Domain Tags (Cray Only)
+.IP
+10) Troubleshooting
+.IP
+11) About the man pages
+.PP
+
+
+.SH 1) PREREQUISITES
 .PP
 .IP \[bu]
 All sections below assume the build directory is /tmp/opt/ovis.
@@ -90,56 +108,130 @@ libevent-2.0 is a requirement.
 .IP \[bu]
 Python 2.7 or Python 2.6 with the argparse module is required for ldmsd_controller
 
-.SH BUILD/INSTALL:
+.SH 2) BUILD/INSTALL:
 .PP
 There is a separate document with build/install instructions.
+
 .PP
-The default ldms build in v3 include authentication turned on.
+The default ldms build in v3 has authentication turned on.
 This document does not include use of the authentication flags; the instructions here
-are as if you had built with --disable-auth. For more information on authentication,
+are as if you had built with --disable_ovis_auth. For more information on authentication,
 see the ldms_authentication man page.
 
-.SH CONFIGURATION TOOLS:
-.PP
-ldmsd_controller is the current preferred configuration tool for v3.
-A configuration file interface is in development.
-ldmsctl which was the configuration tool for v2 will still work, however.
+.SH 3) CONFIGURING AND STARTING AN LDMSD
 
-Information on these tools and their arguments can be found in the appropriate man pages.
-
-Both ldmsd_controller and ldmsctl have both command line executables that can work in interactive mode
-and can be directed commands/scripts to a socket. In order to get support for the interactive mode,
-ldms must be built with
-.B --enable-readline.
-In many cases, the command/script redirection is the way people choose to configure. In that case
-you may build with --disable-readline.
-.PP
-In the instructions below, we first illustrate use of ldmsctl vs ldmsd_controller
-and the use of the interactive interface vs a script interface.
-In all subsequent sections, we consider only the syntax for using ldmsd_controller
-as the configuration tool, with it called from within an encompassing script.
-
-
-.SH START AN LDMSD ON YOUR HOST
-Currently must be run be run as root if using the default path of /var/run/ for the unix domain socket. This can be changed using the environment variable LDMSD_SOCKPATH as described below.
-.SS
-Set environment variables:
+.SS 3-1) Environment Variables for LDMS
+You will need to set the following environment variables when running LDMS daemons.
+This assumes that ldms has been installed in to /tmp/opt/ovis.
 .nf
 .RS
 export LD_LIBRARY_PATH=/tmp/opt/ovis/lib/:/tmp/opt/ovis/lib/ovis-ldms/:<path to libevent-2.0>/lib:$LD_LIBRARY_PATH
 export ZAP_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
 export LDMSD_PLUGIN_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
 export PATH=/tmp/opt/ovis/sbin/:/tmp/opt/ovis/bin:$PATH
-export LDMSD_SOCKPATH=/tmp/run/ldmsd  #(non-root. Change -S arguments accordingly)
+export LDMSD_SOCKPATH=/tmp/run/ldmsd
+.RE
+.fi
+.PP
+LDMSD_SOCKPATH determines the location for the unix domain socket (described in the ldmsd args below).
+The default is /var/run/ldmsd. Make sure you use a location that is writeable if you are running as non-root.
+
+.SS 3-2) Options for Configuring Plugins of an ldmsd
+.PP
+Plugins for an ldmsd can be configured via a configuration file specified as an argument to the "-c"
+flag. Also, ldmsd_controller is a configuration tool that can work in interactive mode
+and can also can be directed commands/scripts to a socket. The plugin configuration commands
+are the same in all cases.
+
+.PP
+In the instructions below, we briefly illustrate use of the configuration
+script to ldmsd vs ldmsd_controller. Some environmental variables have been
+supressed in this section for clarity. In all subsequent examples (Sections 4+), we provide
+versbose detail for the ldmsd configuration script method only. Altering
+this to use the other methods should then be obvious.
+
+.SS
+3-2a) Configuring an ldmsd via a configuration script
+
+This is the most usual mode of configuring ldms in production scenarios
+and can also be used for test scenarios.
+
+Example commands for configuring a sampler:
+.nf
+.RS
+> more config.file
+
+load name=meminfo
+config name=meminfo producer=vm1_1 instance=vm1_1/meminfo
+start name=meminfo interval=1000000
 .RE
 .fi
 
+The path to the configuration script is then provided to the ldmsd via the "-c" flag when it is started:
 
-.SS
-Run ldmsd:
+Example ldmsd start command with a configuration script:
 .nf
 .RS
-<path to executable>/ldmsd -x <transport>:<listen port> -S <unix domain socket path/name> -l <log file path/name> -v <LOG_LEVEL>
+ldmsd -x sock:60000 -S tmp/ldmsd/sock1 -l /tmp/log/logfile -v DEBUG -c ./config.file
+.RE
+.fi
+
+.SS
+3-2b) Configuring ldmsd via ldmsd_controller
+You can use ldmsd_controller to connect to the ldmsd at any time to issue plugin commands.
+This is most often used for dynamically issuing commands to a running ldmsd.
+
+Example ldmsd start command without a configuration script:
+.nf
+.RS
+ldmsd -x sock:60000 -S tmp/ldmsd/sock1 -l /tmp/log/logfile -v DEBUG
+.RE
+.fi
+
+Call the ldmsd_controller interactively and enter the same commands
+as you would in the configuration script.
+.nf
+.RS
+ldmsd_controller --host vm1_1 --port=61000
+ldmsd_controller> load name=meminfo
+ldmsd_controller> config name=meminfo producer=vm1_1 instance=vm1_1/meminfo
+ldmsd_controller> start name=meminfo interval=1000000
+ldmsd_controller> quit
+.RE
+.fi
+
+Relatedly, you can run ldmsd_controller with the commands in script form.
+For example:
+
+.nf
+.RS
+> more config.sh
+
+#!/bin/bash
+echo "load name=meminfo"
+echo "config name=meminfo producer=vm1_1 instance=vm1_1/meminfo"
+echo "start name=meminfo interval=1000000"
+.RE
+.fi
+
+Call the ldmsd_controller with the script:
+.nf
+.RS
+ldmsd_controller --host vm1_1 --port=60000 --script ./config.sh
+.RE
+.fi
+
+ldmsd_contoller may be executed multiple times to issues different
+commands to the same ldmsd.
+
+.SS 3-3) Starting an ldmsd
+.PP
+3-3a) Set environment variables, as described above.
+.PP
+3-3b) Run ldmsd:
+.nf
+.RS
+<path to executable>/ldmsd -x <transport>:<listen port> -S <unix domain socket path/name> -l <log file path/name> -v <LOG_LEVEL> -c config.file
 .RE
 .fi
 
@@ -147,32 +239,35 @@ Notes:
 .IP \[bu]
 Transport is one of: sock, rdma, ugni (ugni is Cray specific for using RDMA over the Gemini/Aries network)
 .IP \[bu]
-The unix domain socket is used by ldmsctl to communicate configuration information to an ldmsd.
-The default path for this is /var/run/ldmsd/. To change this the environment variable LDMSD_SOCKPATH must be set to the desired path (e.g. export LDMSD_SOCKPATH=/tmp/run/ldmsd)
+The configuration file contains the commands to configure the plugins.
 .IP \[bu]
-No log can be can be obtained by specifying /dev/null for the log file or using command line redirection as shown below. Also LOG_LEVEL
-QUITE produces only user-requested output.
+The unix domain socket can be used to communicate configuration information to an ldmsd.
+The default path for this is /var/run/ldmsd/. To change this the environment variable LDMSD_SOCKPATH
+must be set to the desired path (e.g. export LDMSD_SOCKPATH=/tmp/run/ldmsd)
+.IP \[bu]
+No log can be can be obtained by using LOG_LEVEL QUIET, or specifying /dev/null for the log file,
+or using command line redirection.
 .IP \[bu]
 The default is to run as a background process but the -F flag can be specified for foreground
 .IP \[bu]
 A script can be made to start ldmsd and collectors on a host where that script contains the information to execute the command.
 
 .PP
-.SS Examples for running ldmsd:
+3-3c) Examples for launching ldmsd:
 
 .IP \[bu]
-Start an ldmsd on the socket transport with a log file
+Start an ldmsd on the socket transport with a log file and a configuration file.
 .nf
 .RS
-/tmp/opt/ovis/sbin/ldmsd -x sock:60000 -S /var/run/ldmsd/metric_socket -l /tmp/opt/ovis/logs/1
+/tmp/opt/ovis/sbin/ldmsd -x sock:60000 -S /var/run/ldmsd/metric_socket -l /tmp/opt/ovis/logs/1 -c config.file
 .RE
 .ni
 
 .IP \[bu]
-Same but sending stdout and stderr to /dev/null
+Same but with log level QUIET
 .nf
 .RS
-/tmp/opt/ovis/sbin/ldmsd -x sock:60000 -S /var/run/ldmsd/metric_socket -l /tmp/opt/ovis/logs/1  > /dev/null 2>&1
+/tmp/opt/ovis/sbin/ldmsd -x sock:60000 -S /var/run/ldmsd/metric_socket -l /tmp/opt/ovis/logs/1 -c config.file -V QUIET
 .RE
 .fi
 
@@ -181,180 +276,50 @@ Start 2 instances of ldmsd on host vm1
 .nf
 .RS
 Note: Make sure to use different socket names and listen on different ports if you are on the same host.
-/tmp/opt/ovis/sbin/ldmsd -x sock:60000 -S /var/run/ldmsd/metric_socket_vm1_1 -l /tmp/opt/ovis/logs/vm_1  > /dev/null 2>&1
-/tmp/opt/ovis/sbin/ldmsd -x sock:60001 -S /var/run/ldmsd/metric_socket_vm1_2 -l /tmp/opt/ovis/logs/vm_2  > /dev/null 2>&1
+/tmp/opt/ovis/sbin/ldmsd -x sock:60000 -S /var/run/ldmsd/metric_socket_vm1_1 -l /tmp/opt/ovis/logs/vm_1 -c config.file
+/tmp/opt/ovis/sbin/ldmsd -x sock:60001 -S /var/run/ldmsd/metric_socket_vm1_2 -l /tmp/opt/ovis/logs/vm_2 -c config.file
 .RE
 .fi
 
-.SH CONFIGURE COLLECTORS ON A HOST
-.SS Set environment variables
-.nf
-.RS
-export LD_LIBRARY_PATH=/tmp/opt/ovis/lib/:/tmp/opt/ovis/lib/ovis-ldms/:<path to libevent-2.0>/lib:$LD_LIBRARY_PATH
-export ZAP_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export LDMSD_PLUGIN_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export PATH=/tmp/opt/ovis/sbin/:/tmp/opt/ovis/bin:$PATH
-export LDMSD_SOCKPATH=/tmp/run/ldmsd  #(non-root. Change -S arguments accordingly)
-.RE
-.ni
-
-.SS CONFIGURE A COLLECTOR ON VM1 DIRECTLY VIA LDMSCTL (Option 1):
-
-.SS Run ldmsctl:
+.SH 4) EXAMPLE: CONFIGURE AN LDMSD WITH SAMPLER PLUGINS
+.SS 4-1) Create the configuration file for the sampler plugins:
 .PP
-.RS
-ldmsctl -S <unix domain socket path/name associated with target ldmsd>
-.RE
-.br
-.SS Example for running ldmsctl:
+Configure a "meminfo" collector plugin to collect every second.
 .nf
 .RS
-/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl>
-.RE
-.ni
-
-.SS Configure a collector with ldmsctl
-Now configure "meminfo" collector plugin to collect every second.
-.nf
-.RS
-ldmsctl> load name=meminfo
-ldmsctl> config name=meminfo producer=vm1_1 instance=vm1_1/meminfo
-ldmsctl> start name=meminfo interval=1000000
-ldmsctl> quit
+load name=meminfo
+config name=meminfo producer=vm1_1 instance=vm1_1/meminfo
+start name=meminfo interval=1000000
 .RE
 .ni
 
 .PP
 Notes:
 .IP \[bu]
-At the ldmsctl> prompt typing "help" will print out info about the ldmsctl commands and options.
-.IP \[bu]
-interval=<# usec> e.g interval=1000000 defines a one second interval.
-.IP \[bu]
-You can use stop name=meminfo followed by start name=meminfo interval=xxx to change collection intervals.
-.IP \[bu]
 For synchronous operation include "offset=<#usec>" in start line (e.g. start name=meminfo interval=xxx offset=yyy).
 This will cause the sampler to target interval + yyy aligned to the second and micro second
 (e.g. every 5 seconds with an offset of 0 usec would ideally result in collections at 00:00:00, 00:00:05, 00:00:10, etc.
 whereas with an offset of 100,000 usec it would be 00:00:00.1, 00:00:05.1, 00:00:10.1, etc)
 .IP \[bu]
-Different plugins may have additional configuration parameters. Use help within ldmsctl to see these.
-.IP \[bu]
-At the ldmsctl> prompt typing "info" will output all config information to that ldmsd's log file.
+Different plugins may have additional configuration parameters.
 .PP
 
-.SS Verifying the collector
+.SS 4-2) Set environment variables, as described above.
+.SS 4-3) Start the ldmsd with the config file, as described above. e.g.,
+.RS
+ldmsd -x sock:60000 -S tmp/ldmsd/sock1 -l /tmp/log/logfile -v DEBUG -c ./config.file
+.RE
+
+.SS 4-4) Verifying the collector
 .PP
-At this point the ldmsd collector should be checked using the utility
-.B ldms_ls
+At this point the ldmsd collector should be checked using the utility ldms_ls
 (See Using ldms_ls below)
 
-.SS CONFIGURE A COLLECTOR ON VM1 USING A BASH SCRIPT (Option 2):
-.PP
-The following performs the same as the above (but with the addition of the vmstat plugin),
-but using the command direction into the socket,
-An example bash script named "collect.sh" then contains all the commands and performs the
-direction into the socket:
-.nf
-.RS
-#!/bin/bash
-export LD_LIBRARY_PATH=/tmp/opt/ovis/lib64/:$LD_LIBRARY_PATH
-export ZAP_LIBPATH=/tmp/opt/ovis/lib64/ovis-ldms
-export LDMSD_PLUGIN_LIBPATH=/tmp/opt/ovis/lib64/ovis-ldms
-# LDMSD_SOCKPATH for non-root. Change -S arguments accordingly.
-export LDMSD_SOCKPATH=/tmp/run/ldmsd
-LDMSCTL=/tmp/opt/ovis/sbin/ldmsctl
 
-# Configure "meminfo" collector plugin to collect every second (1000000 usec) on vm1_2
-echo load name=meminfo | $LDMSCTL -S /var/run/ldmsd/metric_socket_vm1_2
-echo config name=meminfo producer=vm1_2 instance=vm1_2/meminfo | $LDMSCTL -S /var/run/ldmsd/metric_socket_vm1_2
-echo start name=meminfo interval=1000000 | $LDMSCTL -S /var/run/ldmsd/metric_socket_vm1_2
-# Configure "vmstat" collector plugin to collect every second (1000000 usec) on vm1_2
-echo load name=vmstat | $LDMSCTL -S /var/run/ldmsd/metric_socket_vm1_2
-echo config name=vmstat producer=vm1_2 instance=vm1_2/vmstat | $LDMSCTL -S /var/run/ldmsd/metric_socket_vm1_2
-echo start name=vmstat interval=1000000 | $LDMSCTL -S /var/run/ldmsd/metric_socket_vm1_2
-.RE
-.fi
-.PP
-Make collect.sh executable
-.RS
-chmod +x collect.sh
-.RE
-.PP
-Execute collect.sh (Note: When executing this across many nodes you would use pdsh to execute the script on all nodes in parallel)
-.RS
-./collect.sh
-.RE
-.PP
-At this point the ldmsd collector should be checked using the utility
-.B ldms_ls
-(See Using ldms_ls below)
+.SH 5) EXAMPLE: CONFIGURE AN AGGREGATOR USING LDMSD_CONTROLLER
+.SS 5-1) Start 2 separate ldmsds, one on host vm1_1 and one on host vm1_2, with sampler plugins, as described above
+.SS 5-2) Write a script to add producers and start collecting from them:
 
-.SS CONFIGURE A COLLECTOR USING LDMSD_CONTROLLER (Option 3):
-The syntax for configuring plugins via ldmsd_controller is the same as above,
-ie.g., load, config, and start commands as above. However,
-nlike ldmsctl, there is not a pipe to a socket option for the calls, rather
-one must specify a script with the commands.
-
-> more add_plugins.sh
-.nf
-.RS
-#!/bin/bash
-echo "load name=meminfo"
-echo "config name=meminfo producer=vm1_2 instance=vm1_2/meminfo"
-echo "start name=meminfo interval=1000000"
-.RE
-.ni
-
-If one were to use the interactive interface for ldmsd_controller,
-one could just specify the script when using the interface.
-.nf
-.RS
-> ldmsd_controller --host vm1 --port=61002 --script='./add_plugin.sh'
-.RE
-.ni
-
-
-If you don't want to use the interactive interface for ldmsd_controller,
-you can invoke the ldmsd_controller and pass it the script from an encompassing
-script, but including lines like:
-
-.nf
-.RS
-cmd="ldmsd_controller --host vm1 --port=61002"
-$cmd --script "<<path_to_script>>/add_prdcr.sh"
-.RE
-.ni
-
-.PP
-In all subsequent sections, we consider only the syntax for using ldmsd_controller
-as the configuration tool, with it called from within an encompassing script.
-
-
-.SH CONFIGURE AN AGGREGATOR USING LDMSD_CONTROLLER
-.SS Start ldmsd's to collect
-.PP
-Start the 2 collector ldmsd's as described above.
-
-.SS Set environment variables
-.nf
-.RS
-export LD_LIBRARY_PATH=/tmp/opt/ovis/lib/:/tmp/opt/ovis/lib/ovis-ldms/:<path to libevent-2.0>/lib:$LD_LIBRARY_PATH
-export ZAP_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export LDMSD_PLUGIN_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export PATH=/tmp/opt/ovis/sbin/:/tmp/opt/ovis/bin:$PATH
-export LDMSD_SOCKPATH=/tmp/run/ldmsd  #(non-root. Change -S arguments accordingly)
-.RE
-.ni
-
-.SS Start an ldmsd to aggregate
-Start a ldmsd on your vm using "sock" as the listening transport
-.RS
-/tmp/opt/ovis/sbin/ldmsd -x sock:60002 -S /var/run/ldmsd/metric_socket_agg -l /tmp/opt/ovis/logs/vm1_agg -p 61002 > /dev/null 2>&1
-.RE
-
-.SS Write a script to add producers and start collecting from them using the ldmsd_controller configuration tool:
 This adds vm1_1 as a producer with its sets collected at 2 second intervals
 and vm1_2 as a producer with its sets collected at 5 second intervals. Here the "name" of the producer
 must match the "producer" name given to the sampler.
@@ -363,33 +328,27 @@ The first set of lines adds the producers. The second set of lines establishes t
 at the specified intervals.
 .PP
 .nf
-> more add_prdcr.sh
-#!/bin/bash
-
-echo "prdcr_add name=vm1_2 host=vm1 type=active xprt=sock port=60001 interval=20000000"
-echo "prdcr_start name=vm1_2"
-echo "prdcr_add name=vm1_1 host=vm1 type=active xprt=sock port=60000 interval=20000000"
-echo "prdcr_start name=vm1_1"
-echo "updtr_add name=policy2_h1 interval=2000000 offset=0"
-echo "updtr_prdcr_add name=policy2_h1 regex=vm1_1"
-echo "updtr_start name=policy2_h1"
-echo "updtr_add name=policy5_h2 interval=5000000 offset=0"
-echo "updtr_prdcr_add name=policy5_h2 regex=vm1_2"
-echo "updtr_start name=policy5_h2"
+> more add_prdcr.config
+prdcr_add name=vm1_2 host=vm1 type=active xprt=sock port=60001 interval=20000000
+prdcr_start name=vm1_2
+prdcr_add name=vm1_1 host=vm1 type=active xprt=sock port=60000 interval=20000000
+prdcr_start name=vm1_1
+updtr_add name=policy2_h1 interval=2000000 offset=0
+updtr_prdcr_add name=policy2_h1 regex=vm1_1
+updtr_start name=policy2_h1
+updtr_add name=policy5_h2 interval=5000000 offset=0
+updtr_prdcr_add name=policy5_h2 regex=vm1_2
+updtr_start name=policy5_h2
 .fi
 
-.SS Invoke the script from an encompassing script:
-.PP
-In an encompassing script, use the following to pass the add_prdcr.sh script to the ldmsd_controller:
-.nf
-cmd="ldmsd_controller --host vm1 --port=61002"
-$cmd --script "<<path_to_script>>/add_prdcr.sh"
-.fi
+.SS 5-3) Set environment variables, as described above
+.SS 5-4) Start an ldmsd on your host to aggregate using the configuration file
+.RS
+/tmp/opt/ovis/sbin/ldmsd -x sock:60002 -S /var/run/ldmsd/metric_socket_agg -l /tmp/opt/ovis/logs/vm1_agg -c ./add_prdcr.sh
+.RE
 
 .PP
 Notes:
-.IP \[bu]
-See the ldmsd_controller man page for more description of its options.
 .IP \[bu]
 There is no requirement that aggregator intervals match collection intervals
 .IP \[bu]
@@ -399,63 +358,43 @@ in fidelity (if collecting counter data) or a loss of data points here and there
 values). This can be handled using the synchronous option on both collector and aggregator but is not covered here.
 .fi
 
-.PP
-At this point the ldmsd collector should be checked using the utility
-.B ldms_ls
+.SS 5-4) At this point the ldmsd collector should be checked using the utility ldms_ls
 (See Using ldms_ls below). In this case you should see metric sets for both vm1_1 and vm1_2 displayed when you query the aggregator ldmsd using ldms_ls.
 
 
-.SH CONFIGURE A STORE_CSV STORAGE PLUGIN USING LMDSD_CONTROLLER
-Configure as ldmsd aggregator on a host that has access to a storage device using "sock" as the listening transport.
-
-.SS Configure an aggregator
-Configure an Aggregator as above.
-
-.SS Set environment variables
-.nf
-.RS
-export LD_LIBRARY_PATH=/tmp/opt/ovis/lib/:/tmp/opt/ovis/lib/ovis-ldms/:<path to libevent-2.0>/lib:$LD_LIBRARY_PATH
-export ZAP_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export LDMSD_PLUGIN_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export PATH=/tmp/opt/ovis/sbin/:/tmp/opt/ovis/bin:$PATH
-export LDMSD_SOCKPATH=/tmp/run/ldmsd  #(non-root. Change -S arguments accordingly)
-.RE
-.ni
-
-.SS Write a script to add and start stores:
+.SH 6) EXAMPLE: CONFIGURE AN LDMS AGGREGATOR WITH A STORAGE PLUGIN
+.SS 6-1) Add storage configuration lines to the configuration file described above.
+This adds a store_csv to store sets whose schema are meminfo or vmstat and
+whose instance name matches the regex. A set's schema and instance names will be seen
+in the output of ldms_ls (described below).
 .PP
-.nf
 > more add_store.sh
-#!/bin/bash
-
-# whole path must exist
-STORE_PATH=/XXX/ldmstest/store
-mkdir -p $STORE_PATH
-sleep 1
-
-echo "load name=store_csv"
-echo "config name=store_csv path=$STORE_PATH action=init altheader=0 rollover=30 rolltype=1"
-echo "strgp_add name=policy_mem plugin=store_csv container=csv schema=meminfo"
-echo "strgp_prdcr_add name=policy_mem regex=vm*"
-echo "strgp_start name=policy_vmstat"
-echo "strgp_add name=policy_vmstat plugin=store_csv container=csv schema=vmstat"
-echo "strgp_prdcr_add name=policy_vmstat regex=vm*"
-echo "strgp_start name=policy_vmstat"
-.ni
-
-.SS Invoke the script from an encompassing script:
+load name=store_csv
+config name=store_csv path=<<STORE_PATH>> action=init altheader=0 rollover=30 rolltype=1
+strgp_add name=policy_mem plugin=store_csv container=csv schema=meminfo
+strgp_prdcr_add name=policy_mem regex=vm*
+strgp_start name=policy_vmstat
+strgp_add name=policy_vmstat plugin=store_csv container=csv schema=vmstat
+strgp_prdcr_add name=policy_vmstat regex=vm*
+strgp_start name=policy_vmstat
 .PP
-.nf
-cmd="ldmsd_controller --host vm1 --port=61002"
-$cmd --script "<<path_to_script>>/add_store.sh"
-.fi
 
+Notes:
+.IP \[bu]
+For the csv store, the whole path must pre-exist.
+.IP \[bu]
+See the Plugin_store_csv man page for more info on the plugin configuration arguments.
+.IP \[bu]
+If you want to collect on a host and store that data on the same host, run two ldmsd's: one with a collector plugin only and one as an aggegrator with a store plugin only.
+.PP
 
-.SS Verify the store
+.SS 6-2) Set environment variables, as described above
+.SS 6-3) Start the aggregator with the full configuration file (both aggregator and store lines), as described above
+.SS 6-4) Verify the store
 Go to data store and verify files have been created and are being written to
 .nf
 .RS
-cd ~/stored_data/node/<container>
+cd <<STORE_PATH>>/<container>
 ls -ltr
 .RE
 .fi
@@ -465,27 +404,10 @@ Data will flush to the store when the OS flushes data unless an advanced flag is
 in a default configuration, if you have a small number of nodes and/or a long interval,
 you may not see data appear in the store for a few minutes.
 
-.SS Notes:
-.IP \[bu]
-If you want to collect on a host and store that data on the same host, run two ldmsd's: one with a collector plugin only and one as an aggegrator with a store plugin only.
-.PP
 
-.SH USING LDMS_LS TO DISPLAY SETS/METRICS FROM AN LDMSD
-
-.SS Set environment variables
-.nf
-.RS
-export LD_LIBRARY_PATH=/tmp/opt/ovis/lib/:/tmp/opt/ovis/lib/ovis-ldms/:<path to libevent-2.0>/lib:$LD_LIBRARY_PATH
-export ZAP_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export LDMSD_PLUGIN_LIBPATH=/tmp/opt/ovis/lib/ovis-ldms
-export PATH=/tmp/opt/ovis/sbin/:/tmp/opt/ovis/bin:$PATH
-(LDMSD_SOCKPATH does not need to be set)
-.RE
-.ni
-
-.SS Examples for running ldms_ls
-.IP \[bu]
-Query ldmsd on host vm1 listening on port 60000 using the sock transport for metric sets being served by that ldmsd
+.SH 7) EXAMPLES: USING LDMS_LS TO DISPLAY SETS/METRICS FROM AN LDMSD
+.SS 7-1) Set environment variables, as described above
+.SS 7-2a) Query ldmsd on host vm1 listening on port 60000 (sampler) using the sock transport for metric sets being served by that ldmsd
 .nf
 .RS
 ldms_ls -h vm1 -x sock -p 60000
@@ -495,13 +417,24 @@ vm1_1/vmstat
 .RE
 .fi
 
-.IP \[bu]
-Query ldmsd on host vm1 listening on port 60000 using the sock transport for the names and contents of metric sets being served by that ldmsd.
+.SS 7-2b) Query ldmsd on host vm1 listening on port 60002 (aggregator) using the sock transport for metric sets being served by that ldmsd
+.nf
+.RS
+ldms_ls -h vm1 -x sock -p 60002
+Should return:
+vm1_1/meminfo
+vm1_1/vmstat
+vm1_2/meminfo
+vm1_2/vmstat
+.RE
+.fi
+
+.SS 7-2c) Query ldmsd on host vm1 listening on port 60000 using the sock transport for the names and contents of metric sets being served by that ldmsd.
 Should return: Set names (vm1_1/meminfo and vm1_1/vmstat in this case) as well as all names and values associated with each set respectively.
 Only vm1_1/meminfo shown here.
 .nf
 .RS
-> ldms_ls -h vm1 -x sock-p 60000 -l
+> ldms_ls -h vm1 -x sock -p 60000 -l
 vm1_1/meminfo: consistent, last update: Wed Jul 31 21:51:08 2013 [246540us]
 U64 33084652         MemTotal
 U64 32092964         MemFree
@@ -547,8 +480,7 @@ U64 27262976         DirectMap1G
 .RE
 .nf
 
-.IP \[bu]
-For a non-existent set
+.SH 7-2d) Query for a non-existent set:
 .nf
 .RS
 ldms_ls -h vm1 -x sock -p 60000 -l vm1_1/foo
@@ -557,16 +489,30 @@ ldms_ls: lookup failed for set 'vm1_1/foo'
 .RE
 .fi
 
-.IP \[bu]
-Display metadata about sets contained by vm1 ldmsd listening on port 60000
+.SH 7-2e) Display metadata about sets contained by vm1 ldmsd listening on port 60000
 .nf
 .RS
-ldms_ls -h vm1 -x sock -p 60000 -v will output metadata information
+ldms_ls -h vm1 -x sock -p 60000 -v
+vm1_1/meminfo: consistent, last update: Fri Dec 16 17:12:08 2016 [5091us]
+  METADATA --------
+    Producer Name : vm1_1
+    Instance Name : vm1_1/meminfo
+      Schema Name : meminfo
+             Size : 1816
+     Metric Count : 43
+               GN : 2
+  DATA ------------
+        Timestamp : Fri Dec 16 17:12:08 2016 [5091us]
+         Duration : [0.000072s]
+       Consistent : TRUE
+             Size : 384
+               GN : 985
+  -----------------
 .RE
 .fi
 .PP
 
-.SH STOP AN LDMSD
+.SH 8) STOP AN LDMSD
 .SS
 To kill all ldmsd on a host
 .nf
@@ -575,7 +521,8 @@ killall ldmsd
 .RE
 .ni
 
-.SH PROTECTION DOMAIN TAGS (Cray XE/XK)
+.SH 9) PROTECTION DOMAIN TAGS (Cray)
+.SS 9-1) Cray XE/XK:
 If you are going to be using the "ugni" transport (RDMA over Gemini) you will need to run with either system (as root) or user (as user) ptags. While root CAN run using any ptag the fact that its use is unknown to ALPS could cause collisions with applications.
 
 .SS To see current ptags:
@@ -631,7 +578,7 @@ aprun <<usual aprun args here>> -p foo ldms_ls <<usual ldms_ls flags here>>
 Note: On some systems you will run aprun after a qsub -I or within a script specified in qsub or similiar.
 
 
-.SH PROTECTION DOMAIN TAGS (Cray XC)
+.SS 9-2) Cray XC, CLE <= 5.2:
 If you are going to be using the "ugni" transport (RDMA over Aries) you will need to run with either system (as root) or user (as user) ptags. While root CAN run using any ptag the fact that its use is unknown to ALPS could cause collisions with applications.
 
 .SS To see current ptags:
@@ -688,7 +635,7 @@ aprun <<usual aprun args here>> -p foo ldms_ls <<usual ldms_ls flags here>>
 .fi
 Note: On some systems you will run aprun after a qsub -I or within a script specified in qsub or similiar.
 
-.SH TROUBLESHOOTING
+.SH 10) TROUBLESHOOTING
 
 .SS What causes the following error: libibverbs: Warning: RLIMIT_MEMLOCK is 32768 bytes?
 Running as a user with "max locked memory" set too low.
@@ -757,16 +704,18 @@ Tue Sep 24 08:42:42 2013: cq_thread_proc: Error 11  monitoring the CQ.
 .RE
 .fi
 
-.SH MAN PAGES
+.SH 11) MAN PAGES
 ldms comes with man pages. In the build process these will be installed in <build_path>/ovis/share/man.
 Man pages are in the following catagories:
 .SS General
 General pages address information, such as ldms_build_install, ldms_quickstart, and ldms_authentication.
 .SS Utilities
-Utilities pages address the various utilities and commands such as ldmsd, ldmsd_controller, ldms_ls, and ldmsctl.
+Utilities pages address the various utilities and commands such as ldmsd, ldmsd_controller, and ldms_ls.
 .SS Plugins
 Plugin pages address all plugins, both samplers and stores. Naming convention for these pages is Plugin_XXX.
-For example: Plugin_aries_mmr, Plugin_cray_system_sampler_variants, Plugin_kgnilnd, Plugin_meminfo, Plugin_procinterrupts, Plugin_procnetdev, Plugin_procnfs, Plugin_store_csv, Plugin_store_sos, and Plugin_vmstat.
+For example: Plugin_aries_mmr, Plugin_cray_system_sampler_variants, Plugin_kgnilnd, Plugin_meminfo,
+Plugin_procinterrupts, Plugin_procnetdev, Plugin_procnfs, Plugin_store_csv, Plugin_store_function_csv,
+Plugin_store_sos, and Plugin_vmstat.
 
 .SH NOTES
 As part of the install, test scripts are placed in /tmp/opt/ovis/bin. These scripts
@@ -779,5 +728,4 @@ No known bugs.
 
 
 .SH SEE ALSO
-ldms_build_install(7), ldmsd(8), ldmsd_controller(8), ldms_authentication(7), ldmsctl(8), ldms_build_install(7), ldms_ls(8), Plugin_aries_mmr(7), Plugin_cray_system_sampler_variants(7), Plugin_kgnilnd(7), Plugin_meminfo(7), Plugin_procinterrupts(7), Plugin_procnetdev(7), Plugin_procnfs(7), Plugin_store_csv(7), Plugin_store_sos(7), Plugin_vmstat(7)
-
+ldms_build_install(7), ldmsd(8), ldmsd_controller(8), ldms_authentication(7), ldms_build_install(7), ldms_ls(8)
